--- a/notebooks/01_Integración_Calidad.ipynb
+++ b/notebooks/01_Integración_Calidad.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 127,
    "id": "4ee32f3d",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 128,
    "id": "ff2bdc4f",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 129,
    "id": "24211ada",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 130,
    "id": "f990869d",
    "metadata": {},
    "outputs": [
@@ -323,20 +323,24 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = \"C:\\\\Users\\\\danig\\\\OneDrive\\\\Documentos\\\\GitHub\\\\E-Visor\\\\data\\\\datos_exportados_2025-05-01_a_2025-05-08_Medidores_Landis.csv\"\n",
-    "df = pd.read_csv(csv_path, sep=\";\")\n",
-    "df.head()"
+    "landis1_path = \"C:\\\\Users\\\\danig\\\\OneDrive\\\\Documentos\\\\GitHub\\\\E-Visor\\\\data\\\\datos_exportados_2025-05-01_a_2025-05-08_Medidores_Landis.csv\"\n",
+    "landis2_path = \"C:\\\\Users\\\\danig\\\\OneDrive\\\\Documentos\\\\GitHub\\\\E-Visor\\\\data\\\\datos_exportados_2025-05-09_a_2025-05-16_Medidores_Landis.csv\"\n",
+    "landis3_path = \"C:\\\\Users\\\\danig\\\\OneDrive\\\\Documentos\\\\GitHub\\\\E-Visor\\\\data\\\\datos_exportados_2025-05-17_a_2025-05-23_Medidores_Landis.csv\"\n",
+    "df1 = pd.read_csv(landis1_path, sep=\";\")\n",
+    "df2 = pd.read_csv(landis2_path, sep=\";\")\n",
+    "df3 = pd.read_csv(landis3_path, sep=\";\")\n",
+    "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "id": "75f8cac5",
    "metadata": {},
    "outputs": [
@@ -398,12 +402,12 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "48f8b6b0",
    "metadata": {},
    "outputs": [
@@ -420,14 +424,14 @@
        "       'SmartMeter_SM_B15_BIBL', 'SmartMeter_SM_B3_RECT'], dtype=object)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Códigos de bloques identificados en el dataset\n",
-    "df['entity_id'].unique()\n",
+    "df1['entity_id'].unique()\n",
     "#Validar que no haya duplicados ni bloques faltantes!"
    ]
   },
@@ -452,7 +456,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
+   "id": "56fe228f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "353431"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['time_index'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "4caa4152",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time_index\n",
+       "2025-05-05 23:52:59.911000-05:00    2\n",
+       "2025-05-06 23:59:16.624000-05:00    2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = df1['time_index'].value_counts()\n",
+    "ids[ids > 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78293a3b",
+   "metadata": {},
+   "source": [
+    "## Integración de datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "3abae142",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicados con mismo 'entity_id' y 'time_index': 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dfs = [df1, df2, df3]  # todos con columnas iguales (ej. time_index, entity_id, activepower, ...)\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "#quita duplicados exactos (mismo medidor y timestamp)\n",
+    "if {'entity_id','time_index'}.issubset(df.columns):\n",
+    "    #ver los posibles duplicados\n",
+    "    duplicados = df[df.duplicated(subset=['entity_id','time_index'], keep=False)]\n",
+    "    print(f\"Duplicados con mismo 'entity_id' y 'time_index': {len(duplicados)}\")\n",
+    "    df = df.drop_duplicates(subset=['entity_id','time_index'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "2d0f2432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000930 entries, 0 to 1000929\n",
+      "Data columns (total 43 columns):\n",
+      " #   Column                   Non-Null Count    Dtype  \n",
+      "---  ------                   --------------    -----  \n",
+      " 0   entity_id                1000930 non-null  object \n",
+      " 1   entity_type              1000930 non-null  object \n",
+      " 2   time_index               1000930 non-null  object \n",
+      " 3   v1                       1000785 non-null  float64\n",
+      " 4   v2                       1000785 non-null  float64\n",
+      " 5   v3                       1000785 non-null  float64\n",
+      " 6   i1                       1000785 non-null  float64\n",
+      " 7   i2                       1000785 non-null  float64\n",
+      " 8   i3                       1000785 non-null  float64\n",
+      " 9   in                       1000785 non-null  float64\n",
+      " 10  frequency                1000785 non-null  float64\n",
+      " 11  v1angle                  1000785 non-null  float64\n",
+      " 12  v2angle                  1000785 non-null  float64\n",
+      " 13  v3angle                  1000785 non-null  float64\n",
+      " 14  i1angle                  1000785 non-null  float64\n",
+      " 15  i2angle                  1000785 non-null  float64\n",
+      " 16  i3angle                  1000785 non-null  float64\n",
+      " 17  totalpowerfactor         1000785 non-null  float64\n",
+      " 18  powerfactor1             1000785 non-null  float64\n",
+      " 19  powerfactor2             1000785 non-null  float64\n",
+      " 20  powerfactor3             1000785 non-null  float64\n",
+      " 21  relativethdpower         1000785 non-null  float64\n",
+      " 22  harmonicsv1              1000785 non-null  float64\n",
+      " 23  harmonicsv2              1000785 non-null  float64\n",
+      " 24  harmonicsv3              1000785 non-null  float64\n",
+      " 25  relativethdvoltage       1000785 non-null  float64\n",
+      " 26  harmonicsi1              1000785 non-null  float64\n",
+      " 27  harmonicsi2              1000785 non-null  float64\n",
+      " 28  harmonicsi3              1000785 non-null  float64\n",
+      " 29  relativethdcurrent       1000785 non-null  float64\n",
+      " 30  activeenergyimport       1000785 non-null  float64\n",
+      " 31  activeenergyexport       1000785 non-null  float64\n",
+      " 32  reactiveenergyimport     1000785 non-null  float64\n",
+      " 33  reactiveenergyexport     1000785 non-null  float64\n",
+      " 34  activeenergyimportday    1000785 non-null  float64\n",
+      " 35  activeenergyexportday    1000785 non-null  float64\n",
+      " 36  reactiveenergyimportday  1000785 non-null  float64\n",
+      " 37  reactiveenergyexportday  1000785 non-null  float64\n",
+      " 38  activepower              1000785 non-null  float64\n",
+      " 39  reactivepower3           786071 non-null   float64\n",
+      " 40  reactivepower            786071 non-null   float64\n",
+      " 41  reactivepower2           786071 non-null   float64\n",
+      " 42  reactivepower1           786071 non-null   float64\n",
+      "dtypes: float64(40), object(3)\n",
+      "memory usage: 328.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "id": "d1059d54",
    "metadata": {},
    "outputs": [],
@@ -464,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 143,
    "id": "46ce65dd",
    "metadata": {},
    "outputs": [
@@ -479,7 +631,7 @@
        "Name: time_index, dtype: datetime64[ns, America/Bogota]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
