--- a/notebooks/01_Integración_Calidad.ipynb
+++ b/notebooks/01_Integración_Calidad.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "3abae142",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
     "df = pd.concat(dfs, ignore_index=True)\n",
     "#quita duplicados exactos (mismo medidor y timestamp)\n",
     "if {'entity_id','time_index'}.issubset(df.columns):\n",
-    "    #ver los posibles duplicados\n",
+    "    #ver los posibles duplicados, se asumen como duplicados los que tienen mismo 'entity_id' y 'time_index'!\n",
     "    duplicados = df[df.duplicated(subset=['entity_id','time_index'], keep=False)]\n",
     "    print(f\"Duplicados con mismo 'entity_id' y 'time_index': {len(duplicados)}\")\n",
     "    df = df.drop_duplicates(subset=['entity_id','time_index'])\n"
